tests/fixtures/field_values/DuplicateFields.ts.expected
-----------------
INPUT
----------------- 
/** @GQLType */
export default class Query {
  /** @GQLField */
  hello(): string {
    return "Hello world!";
  }
  /** @GQLField */
  hello(): Array<string> {
    return "Hello world!";
  }
}

-----------------
OUTPUT
-----------------
Error: Field "Query.hello" can only be defined once.:
 --> field_values/DuplicateFields.ts:4:3

  |   /** @GQLField */
4 |   hello(): string {
  |   ^ 
  |     return "Hello world!";


Error: :
 --> field_values/DuplicateFields.ts:8:3

  |   /** @GQLField */
8 |   hello(): Array<string> {
  |   ^ 
  |     return "Hello world!";
